@@ -1,3 +1,5 @@
+DIST beautifulscraper-1.0.2.tar.gz 4706 SHA256 81e3907aabb43337561694b083f83f1dfb587cbfae3058499e50dd8c417133f6 SHA512 ce8e541edb5ee64a055a3ea370ac28b67e0708d27bea0a8f8bdf3ccdf35736590ac725c55e752d9d4cba1dc916b59906f4cb508eff33606da9040099b8bb6402 WHIRLPOOL 665847e9bfd831c6b300b16ba49636ccd359a3c36c055f4c7be8d1bd61ea53cca4c2eeded7e73b625b6ef5fb47a132797bccffbd1549b02746a719a777df5ad0
+EBUILD beautifulscraper-1.0.2.ebuild 554 SHA256 f50b1bf74118e8a309d043dedee6deccadd6b582ef1395e10c018f62684aa686 SHA512 87bc4d368f2532d8dbb1572625560cf4e12ba046129b54360565df51d00aa2d24ce58167d5af5441d101c23a0bb49c2502f3e5789f9e9337b308d918c877782f WHIRLPOOL 15123bfa557841e59d033f5139f9e9024110a00d0b6fcb581e0249f98aad51ce3fe565956272f70dee3b80611c8d203f5a7e14e72b20d6448ddbe7235378b7dd
 EBUILD beautifulscraper-9999.ebuild 524 SHA256 4d931abb267f4a2e16f421237c9a9e41ad0eb49098bbebee7de1f00dc9b6a13f SHA512 066c7551ef6f72713aeec1e460dd0736088fbbdbc108100de5f1bbaf5c0797079d1d65a8f6ad0afc572debc30d18e48c08263a0c678dd002cfc5399c8cbded2b WHIRLPOOL 3f1160b767bc4cf8f0c6285f7cb1db9b4dc7869b140a1b493f1b45d9feb881195cdc3b147e1c4821f0fa0cf7b973accad3ed53b0a912a641d736c56f7c0effe7
-MISC ChangeLog 277 SHA256 7779866b0638b8314352c76741bf072ba1ee78a6ab6a2634612e75648c875716 SHA512 b62495d7d0c25e7fe2efff388b184fe4a52edbea7d7dfd794f3d5beeba9e882dd25d28ddfd39c55115051dc09b79dd2c5c5731eb4f7ad10549dba1212134d270 WHIRLPOOL 9d45da985a5e5062242261f0874fa74e8d611dca120756c2c9181ba89b14271b636a0f465ae57c1109b2c3a317f0a060868e5c34a1ea247cc7bcf714a124cc66
+MISC ChangeLog 425 SHA256 b7f099cc3af9a952938476e7fca5dcd12211e1c60b8cc99d86b40ed4af3e841d SHA512 3cf65ba9960d6d78c5f35702ad753a1ad2060668ea5e1f8da6042c62f07f1dd7da0371de62de38c5098947cc59c5d1adf31ae2a70230fda89d91d753aa56a7c8 WHIRLPOOL db8d8dd6e78387f1378978c23a9c45b9a6da4a43bafc6d3383ae375ff0517e889fd1fba875941b58d2962312c6c348a0fbd1eec82c657971e2fd89036a9286b3
 MISC metadata.xml 284 SHA256 17fb3872034d6ebe2406456c11ce51ce35ebcd0cdb3d11c098de0bf39d5431e4 SHA512 e23f2a8cf77aa0d3f312e5897cfb380d326701f680cd2e1147592b97b79ecf242d8286517f3c9283113d7abf93f1856290e0efbb6a42bc01af4f50a1133b1d5f WHIRLPOOL d7e74af07fde7ff86ea6e5206c521b7ee8a714f17d438cbfb767e96103b5e311fd306591e2eb86e9015f5cd5d04ecd262c9736a99a12858ac5916a19c1e5b08d
