@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*beautifulscraper-1.0.2 (03 Dec 2012)
+
+  03 Dec 2012; Alex Brandt <alunduil@alunduil.com>
+  +beautifulscraper-1.0.2.ebuild:
+  Adding 1.0.2 release
+
 *beautifulscraper-9999 (03 Dec 2012)
 
   03 Dec 2012; Alex Brandt <alunduil@alunduil.com>
